--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.1",
+    "bootstrap": "4.6.0",
     "connected-react-router": "^6.9.1",
+    "font-awesome": "^4.7.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.0",
     "node-sass": "^6.0.0",
@@ -23,11 +24,13 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-flatpickr": "^3.10.7",
+    "react-image-lightbox": "^5.1.4",
     "react-intl": "^5.20.2",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-slick": "^0.29.0",
     "react-toastify": "^5.5.0",
     "reactstrap": "^8.9.0",
     "redux": "^4.1.0",
@@ -37,6 +40,7 @@
     "redux-state-sync": "^2.1.0",
     "redux-thunk": "^2.3.0",
     "save": "^2.9.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.3.2"
   },
   "scripts": {
